--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <img src="logo.png" alt="">
+        <img src="assets/logo.png" alt="">
     </nav>
 
     <div class="container">
